--- a/MyriamBot/App.config
+++ b/MyriamBot/App.config
@@ -5,8 +5,8 @@
   </startup>
   <appSettings>
     <!--30,000 transactions, 20 per minute-->
-    <add key="FaceApiKey1" value="[YOUR_API_KEY]" />
-    <add key="FaceApiKey2" value="[YOUR_API_KEY]" />
+    <add key="FaceApiKey1" value="[YourAPIKey]" />
+    <add key="FaceApiKey2" value="[YourAPIKey]" />
     <add key="FaceApiEndpoint" value="https://westcentralus.api.cognitive.microsoft.com/face/v1.0" />
     <add key="PersonGroupKey" value="id_capemployees_01" />
   </appSettings>
@@ -14,7 +14,19 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.2" newVersion="4.1.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.ProjectOxford.Common" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.25.0" newVersion="2.0.25.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
