camera layout fixes + forget person fix + remember new person immediate fix

--- a/MyriamBot/App.config
+++ b/MyriamBot/App.config
@@ -5,8 +5,8 @@
   </startup>
   <appSettings>
     <!--30,000 transactions, 20 per minute-->
-    <add key="FaceApiKey1" value="[YourAPIKey]" />
-    <add key="FaceApiKey2" value="[YourAPIKey]" />
+    <add key="FaceApiKey1" value="[YOUR_KEY_HERE]" />
+    <add key="FaceApiKey2" value="[NOT_USED_FOR_NOW]" />
     <add key="FaceApiEndpoint" value="https://westcentralus.api.cognitive.microsoft.com/face/v1.0" />
     <add key="PersonGroupKey" value="id_capemployees_01" />
   </appSettings>
